<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.recipebox.ui.home.HomeFragment"
        android:label="Menu">
        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/recipeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/myRecipesFragment"
        android:name="com.example.recipebox.ui.myrecipes.MyRecipesFragment"
        android:label="@string/nav_my_recipes">
        <action
            android:id="@+id/action_myRecipes_to_detail"
            app:destination="@id/recipeDetailFragment" />
        <action
            android:id="@+id/action_myRecipes_to_add"
            app:destination="@id/addRecipeFragment" />
    </fragment>

    <fragment
        android:id="@+id/apiRecipesFragment"
        android:name="com.example.recipebox.ui.apirecipes.ApiRecipesFragment"
        android:label="Recipes from API">
        <action
            android:id="@+id/action_api_to_detail"
            app:destination="@id/recipeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/shoppingListFragment"
        android:name="com.example.recipebox.ui.shoppinglist.ShoppingListFragment"
        android:label="@string/shopping_list" />

    <fragment
        android:id="@+id/moreFragment"
        android:name="com.example.recipebox.ui.more.MoreFragment"
        android:label="@string/nav_more" />

    <fragment
        android:id="@+id/recipeDetailFragment"
        android:name="com.example.recipebox.ui.detail.RecipeDetailFragment"
        android:label="Recipe Details">
        <argument
            android:name="recipeId"
            app:argType="long" />
        <argument
            android:name="isLocal"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>

    <fragment
        android:id="@+id/addRecipeFragment"
        android:name="com.example.recipebox.ui.addrecipe.AddRecipeFragment"
        android:label="Add recipe" />

</navigation>